[package]
name = "quizzical"
description = "A flexible library for creating custom quizzes with multiple question types, scoring, randomization, and serialization support."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["quiz", "custom quiz", "question answering"]
categories = ["game-development"]
repository = "https://github.com/JamesClarke7283/Quizzical"
rust-version = "1.65.0"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
simd-json = { version = "0.13", features = ["serde"] }
thiserror = "1.0"
log = { version = "0.4", optional = true }

[features]
default = []
logging = ["log"]

[lints]
workspace = true
